[package]
name = "lume_architect"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
lume_architect_derive = { path = "derive", optional = true }

bitflags = "^2"
fxhash = "^0"
indexmap = "^2"

[features]
default = ["derive"]
derive = ["dep:lume_architect_derive"]

[workspace]
members = ["derive"]
resolver = "3"

[workspace.package]
version = "0.0.1"
rust-version = "1.88.0"
edition = "2024"
authors = ["Max T. Kristiansen <me@maxtrier.dk>"]
license = "MIT"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
wildcard_imports = "allow"
range_plus_one = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
return_self_not_must_use = "allow"
